<resources>
    <string name="app_name">ReservationEnhanced</string>
    <string name="nameQ">Name</string>
    <string name="numQ">Telephone</string>
    <string name="sizeQ">Size</string>
    <string name="smoke">Smoking</string>
    <string name="submit">Reserve</string>
    <string name="reset">Reset</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
</resources>
