<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameQ" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textViewTele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numQ" />

    <EditText
        android:id="@+id/editTextTele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sizeQ" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/smoke_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/smoke" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day" />

    <EditText
        android:id="@+id/editTextDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Click here to select day"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Click here to select time"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>
